app/_assets/styles/custom/components/_sidebar.scss
// 
// Sidebarm, sidebar button
// 

$sidebar-width: $sidebarWidth; // comes from VuePress core styles
$sidebar-top-spacing: $navbar-height-large;
$sidebar-link-active: $color-5;
$sidebar-link-hover: $color-1;
$sidebar-link-active-border-color: $color-5;

$sidebar-button-size: 1.25rem;
$sidebar-button-left-spacing: 1.5rem;

// Sidebar

.sidebar-wrapper {
  position: relative;

  &:after {
    position: absolute;
    top: 0; right: 0; bottom: 0;
    z-index: 0;
    display: block;
    height: 100%;
    width: 100vw;
    content: "";
    background-color: $gray-1;
  }
}

.sidebar {
  position: fixed;
  top: 0;
  left: auto;
  overflow-x: visible !important;
  background: none;
  // background-color: #fff;
  font-size: $base-font-size;
  width: $sidebar-width;
  padding-top: $sidebar-top-spacing;

  .nav-item {
    margin: 0;
    
    > a {
      padding: 1rem;
    }
  }

  .nav-links .nav-item,
  .nav-links .repo-link {
    padding: 0;
  }

  .nav-link {
    display: block;
  }

  .nav-links {
    display: block;
  }
}

.sidebar-links {
  
}

a.sidebar-link {

  &:hover {
    color: $sidebar-link-hover;
  }

  &.active {
    color: $sidebar-link-active;
    border-left-color: $sidebar-link-active-border-color;
  }
}

// Sidebar button

.sidebar-button {
  top: calc( (#{$navbarHeight} / 2) - (#{$sidebar-button-size} / 2) );
  left: $sidebar-button-left-spacing;
  display: none;
  padding: 0;
  outline: 0;

  .icon {
    margin: 0;
    padding: 0;

    path {
      transition: fill 250ms $cb-1;
    }
  }
}

.sidebar-open .sidebar-button .icon path {
  fill: $green-base !important;
}

// Responsive

@media (min-width: $MQNarrowMid + 1) {
  .sidebar {
    position: sticky;
    // top: $navbarHeight;
    left: auto;
    bottom: auto;
    // padding-top: $navbarHeight;
  }

  .page {
    // padding-left: 15rem;
  }

  .theme-container.no-sidebar .sidebar {
    display: none;
  }

  .sidebar .nav-links {
    display: none;
  }
}

@media (max-width: $MQNarrowMid) {
  .sidebar {
    top: 0;
    overflow: auto;
    padding-top: $navbarHeight;
    transform: translateX(-100%);
    transition: transform 0.2s ease;
    background-color: #fff;
  }

  .page {
    padding-left: 0;
  }

  .theme-container {

    &.sidebar-open .sidebar {
      transform: translateX(0);
    }

    &.no-navbar .sidebar {
      padding-top: 0;
    }
  }

  .sidebar-button {
    display: block;
  }
}

